--- a/index.html
+++ b/index.html
@@ -8,34 +8,100 @@
 </head>
 <body>
   <main class="app" role="main">
-  
+
+
     <header>
       <img src="img/logo.png" alt="Logo InTouch" class="logo"/>
-        <h4>Comunicación simple, inclusión real</h4>
-        <link rel="icon" type="img/Copia-de-InTouch.ico" href="img/Copia-de-InTouch.ico">
+      <h1>InTouch</h1>
+      <h4>Comunicación simple, inclusión real</h4>
     </header>
+
 
     <section class="bar" aria-label="Frase armada">
       <div id="sentence" class="sentence" aria-live="polite" aria-atomic="false">
         <span class="chip"><small>Consejo:</small> toca pictogramas para armar y leer una frase.</span>
       </div>
+      <div class="controls">
+        <button id="speakSentence" class="btn-accent">🔊 Leer</button>
+        <button id="clearSentence" class="btn-muted">🧹 Borrar</button>
+      </div>
     </section>
+
 
     <section class="categories" aria-label="Categorías">
       <div class="row">
-          <div class="controls">
-            <button id="speakSentence" class="btn-accent">▶ Leer</button>
-            <button id="clearSentence" class="btn-muted">× Borrar</button>
-          </div>
         <label for="categorySelect">Filtrar por categoría:</label>
         <select id="categorySelect">
           <option value="all">Todas</option>
           <option value="saludos">Saludos</option>
           <option value="necesidades">Necesidades</option>
           <option value="emociones">Emociones</option>
+          <option value="comida">Comida</option>
+          <option value="acciones">Acciones</option>
         </select>
       </div>
     </section>
+
+
+    <section aria-label="Pictogramas">
+      <div class="grid" id="pictogramGrid">
+
+
+        <button class="tile" data-say="Hola" data-cat="saludos" aria-label="Hola">
+          <div class="emoji">👋</div>
+          <div class="label">Hola</div>
+        </button>
+        <button class="tile" data-say="Adiós" data-cat="saludos" aria-label="Adiós">
+          <div class="emoji">👋</div>
+          <div class="label">Adiós</div>
+        </button>
+
+
+        <button class="tile" data-say="Quiero agua" data-cat="necesidades" aria-label="Quiero agua">
+          <div class="emoji">💧</div>
+          <div class="label">Agua</div>
+        </button>
+        <button class="tile" data-say="Tengo hambre" data-cat="necesidades" aria-label="Tengo hambre">
+          <div class="emoji">🍽️</div>
+          <div class="label">Hambre</div>
+        </button>
+
+
+        <button class="tile" data-say="Estoy feliz" data-cat="emociones" aria-label="Estoy feliz">
+          <div class="emoji">😊</div>
+          <div class="label">Feliz</div>
+        </button>
+        <button class="tile" data-say="Estoy triste" data-cat="emociones" aria-label="Estoy triste">
+          <div class="emoji">😢</div>
+          <div class="label">Triste</div>
+        </button>
+        <button class="tile" data-say="Estoy enojado" data-cat="emociones" aria-label="Estoy enojado">
+          <div class="emoji">😠</div>
+          <div class="label">Enojado</div>
+        </button>
+
+
+        <button class="tile" data-say="Quiero manzana" data-cat="comida" aria-label="Quiero manzana">
+          <div class="emoji">🍎</div>
+          <div class="label">Manzana</div>
+        </button>
+        <button class="tile" data-say="Quiero pan" data-cat="comida" aria-label="Quiero pan">
+          <div class="emoji">🍞</div>
+          <div class="label">Pan</div>
+        </button>
+
+
+        <button class="tile" data-say="Quiero jugar" data-cat="acciones" aria-label="Quiero jugar">
+          <div class="emoji">🎮</div>
+          <div class="label">Jugar</div>
+        </button>
+        <button class="tile" data-say="Quiero dormir" data-cat="acciones" aria-label="Quiero dormir">
+          <div class="emoji">😴</div>
+          <div class="label">Dormir</div>
+        </button>
+      </div>
+    </section>
+
 
     <section class="addPicto" aria-label="Agregar pictograma">
       <h2>Agregar pictograma</h2>
@@ -45,22 +111,16 @@
           <option value="saludos">Saludos</option>
           <option value="necesidades">Necesidades</option>
           <option value="emociones">Emociones</option>
+          <option value="comida">Comida</option>
+          <option value="acciones">Acciones</option>
         </select>
         <input type="file" id="pictoImage" accept="image/*" />
         <button id="addPictoBtn">＋ Agregar</button>
       </div>
     </section>
 
-    <section aria-label="Pictogramas">
-      <div class="grid" id="pictogramGrid">
-        <button class="tile" data-say="Hola" data-cat="saludos" aria-label="Hola">
-          <div class="emoji">👋</div>
-          <div class="label">Hola</div>
-        </button>
-      </div>
-    </section>
-
     <section class="tts" aria-label="Texto a voz libre">
+      <h2>Texto libre</h2>
       <div class="row">
         <label for="voiceSelect">Voz:</label>
         <select id="voiceSelect" aria-label="Seleccionar voz"></select>
@@ -77,11 +137,11 @@
     </section>
 
     <footer>
-      <p> © InTouch 2025 - Demo - Funciona sin conexión en navegadores modernos que soportan Web Speech API.</p>
       <img src="img/InTouch.png" alt="InTouch" class="rompecabeza"/>
+      <p>Demo básica · Funciona sin conexión en navegadores modernos con Web Speech API.</p>
     </footer>
-  </main>
 
+  </main>
   <script src="javascript.js"></script>
 </body>
 </html>
