añadir archivos al .gitignore, rehacer javascript.js y modificar index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#a3c9f9">
-  <title>InTouch · Pictogramas + Texto a Voz</title>
+  <title>InTouch</title>
 </head>
 <body>
   <main class="app" role="main">
