ABMs, creación y cambio de ubicación en los archivos

--- a/index.html
+++ b/index.html
@@ -117,11 +117,12 @@
         <button id="stopSpeech" class="btn-danger">⏹ Detener</button>
       </div>
     </section>
+    <a href="abm.html" class="admin-link" aria-label="Ir a administración de pictogramas">Administración de pictogramas</a>  
     <footer>
       <img src="img/InTouch.png" alt="InTouch" class="rompecabeza"/>
       <p>Demo básica · Funciona sin conexión en navegadores modernos con Web Speech API.</p>
     </footer>
   </main>
-  <script src="javascript.js"></script>
+  <script src="js/javascript.js"></script>
 </body>
 </html>
