Botón de regresar al index

--- a/abm.html
+++ b/abm.html
@@ -13,7 +13,7 @@
       <h1>Administración de Pictogramas</h1>
       <p>Añadí, modificá o eliminá pictogramas en tu aplicación.</p>
     </header>
-
+    <a href="index.html">← Volver a la app</a>
     <section class="picto-form">
       <h2>＋ Añadir / Editar pictograma</h2>
       <form id="pictoForm" enctype="multipart/form-data">
