cambio de src en etiqueta script

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <p>Demo básica · Funciona sin conexión en navegadores modernos con Web Speech API.</p>
     </footer>
   </main>
-  <script src="js/javascript.js"></script>
+  <script src="javascript.js"></script>
 </body>
 
 </html>
