--- a/tts.html
+++ b/tts.html
@@ -30,6 +30,6 @@
     </section>
     </section>
   </main>
-<script src="js/javascript.js"></script>
+<script src="javascript.js"></script>
 </body>
 </html>
