comentar sección de  añadir pictograma

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </button>
       </div>
     </section>
-    <section class="addPicto" aria-label="Agregar pictograma">
+    <!-- <section class="addPicto" aria-label="Agregar pictograma">
       <h2>Agregar pictograma</h2>
       <div class="row">
         <input type="text" id="pictoLabel" placeholder="Texto a pronunciar" />
@@ -100,7 +100,7 @@
         <input type="file" id="pictoImage" accept="image/*" />
         <button id="addPictoBtn">＋ Agregar</button>
       </div>
-    </section>
+    </section> -->
     <section class="tts" aria-label="Texto a voz libre">
       <h2>Texto libre</h2>
       <div class="row">
