--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#a3c9f9">
-  <script defer src="js/main.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/pictos.js"></script>
   <title>InTouch</title>
 </head>
 <body>
