--- a/tts.html
+++ b/tts.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="./img/logo_fondo.ico">
   <link rel="stylesheet" href="css/style.css">
-  <script defer src="js/tts.js"></script>
+  <script src="js/main.js"></script>  
+  <script src="js/tts.js"></script>
   <title>InTouch</title>
 </head>
 <body>
