Cambios en el main.js y heads de los html

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <button id="addPictoBtn">＋ Agregar</button>
       </div>
     </section> -->
-    <section class="tts" aria-label="Texto a voz libre">
+    <!-- <section class="tts" aria-label="Texto a voz libre">
       <h2>Texto libre</h2>
       <div class="row">
         <label for="voiceSelect">Voz:</label>
@@ -118,7 +118,7 @@
         <button id="speakText">▶ Leer texto</button>
         <button id="stopSpeech" class="btn-danger">⏹ Detener</button>
       </div>
-    </section>
+    </section> -->
     <button class="admin-link" onclick="window.location.href='abm.html'">Administración de pictogramas</button>
     <br>
     <button class="admin-link" onclick="window.location.href='tts.html'">Voz a Texto</button>
