--- a/tts.html
+++ b/tts.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="js/main.js"></script>  
   <script src="js/tts.js"></script>
-  <title>InTouch</title>
+  <title>InTouch - Voz a texto</title>
 </head>
 <body>
   <main class="admin-app">
@@ -15,7 +15,7 @@
       <h1>Texto Libre</h1>
       <p>Escribí y escuchá cualquier texto.</p>
     </header>
-    <a href="index.html">← Volver a la app</a>
+    <button class="admin-link" onclick="window.location.href='index.html'">Ir a la App</button>
     <section class="text-to-speech">
         <label for="voiceSelect">Voz:</label>
         <select id="voiceSelect" aria-label="Seleccionar voz"></select>
