--- a/tts.html
+++ b/tts.html
@@ -13,7 +13,7 @@
   <main class="admin-app">
     <header>
       <h1>Texto Libre</h1>
-      <p>Escribí y escuchá cualquier texto.</p>
+      <p>Escribí y escuchá cualquier texto</p>
     </header>
     <button class="admin-link" onclick="window.location.href='index.html'">Ir a la App</button>
     <section class="text-to-speech">
@@ -24,7 +24,7 @@
         <label for="pitch">Tono:</label>
         <input id="pitch" type="range" min="0.5" max="1.5" step="0.1" value="1" />
       </div>
-      <textarea id="freeText" placeholder="Escribí un mensaje para leer en voz alta…"></textarea>
+      <textarea id="freeText" placeholder="Escribí tu texto acá"></textarea>
       <div class="row">
         <button id="speakText">▶ Leer texto</button>
         <button id="stopSpeech" class="btn-danger">⏹ Detener</button>
