--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <br>
     <button class="admin-link" onclick="window.location.href='tts.html'">Voz a Texto</button>
     <footer>
-      <p>Demo básica · Funciona sin conexión en navegadores modernos con Web Speech API.</p>
+      <p>© InTouch - 2025</p>
     </footer>
   </main>
 </body>
