--- a/abm.html
+++ b/abm.html
@@ -22,17 +22,20 @@
       </div>
     </header>
 
-    <section class="picto-grid-container">
-      <div class="grid-header">
-        <h2>🎨 Mis Pictogramas</h2>
-        <div class="filter-controls">
-          <select id="filtroCategoria" onchange="filtrarPorCategoria()">
-            <option value="">Todas las categorías</option>
-          </select>
+    <section class="info-section">
+      <div class="info-card">
+        <h2>🎨 Panel de Administración</h2>
+        <p>Desde aquí puedes crear, editar y eliminar pictogramas. Los pictogramas aparecerán automáticamente en la aplicación principal.</p>
+        <div class="stats">
+          <div class="stat-item">
+            <span class="stat-number" id="totalPictogramas">0</span>
+            <span class="stat-label">Pictogramas</span>
+          </div>
+          <div class="stat-item">
+            <span class="stat-number" id="totalCategorias">0</span>
+            <span class="stat-label">Categorías</span>
+          </div>
         </div>
-      </div>
-      <div class="picto-grid" id="pictoGrid">
-        <!-- Los pictogramas se cargan dinámicamente -->
       </div>
     </section>
   </main>
