Fix: Solucionado problema de pictogramas que no se mostraban en index

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <div class="controls">
         <button id="speakSentence" class="btn-accent">🔊 Leer</button>
         <button id="clearSentence" class="btn-muted">🧹 Borrar</button>
+        <button id="reloadPictos" class="btn-muted" onclick="recargarPictogramas()">🔄 Recargar</button>
       </div>
     </section>
     <!-- <section class="addPicto" aria-label="Agregar pictograma">
