--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="controls">
         <button id="speakSentence" class="btn-accent">🔊 Leer</button>
         <button id="clearSentence" class="btn-muted">🧹 Borrar</button>
-        <button id="reloadPictos" class="btn-muted" onclick="recargarPictogramas()">🔄 Recargar</button>
+        <button id="reloadPictos" class="btn-accent" onclick="recargarPictogramas()" title="Recargar pictogramas desde la base de datos">🔄 Recargar</button>
       </div>
     </section>
     <!-- <section class="addPicto" aria-label="Agregar pictograma">
