Creación de login, register y su css, adición de botones en el menu flotante, cambiar TTS, ABM, LOG Y REG adentro de la carpeta views para más organización

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
     <button class="btn-tts" onclick="irATTS()" title="Texto a Voz">
       🎤
     </button>
+    <button class="btn-login" onclick="irALOGIN()" title="Iniciar Sesión">
+      🚪
+    </button>
+    <button class="btn-register" onclick="irAREGISTER()" title="Registrarse">
+      📖
+    </button>
   </section>
 
   <script src="js/main.js?v=<?php echo time(); ?>"></script>
