añadir botón logout en menu flotante

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
     <button class="btn-register" onclick="irAREGISTER()" title="Registrarse">
       📖
     </button>
+    <button class="btn-logout" onclick="irALOGOUT()" title="Cerrar Sesión">
+      ❌
+    </button>
   </section>
 
   <script src="js/main.js?v=<?php echo time(); ?>"></script>
