redireccion a login y register

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <link rel="icon" type="image/x-icon" href="./img/logo_fondo.ico">
-  <link rel="stylesheet" href="css/style.css?v=<?php echo time(); ?>">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#a3c9f9">
   <title>InTouch</title>
@@ -65,8 +65,8 @@
     </button>
   </section>
 
-  <script src="js/main.js?v=<?php echo time(); ?>"></script>
-  <script src="js/pictos.js?v=<?php echo time(); ?>"></script>
-  <script src="js/mostrar_menu.js?v=<?php echo time(); ?>"></script>
+  <script src="js/main.js"></script>
+  <script src="js/pictos.js"></script>
+  <script src="js/mostrar_menu.js"></script>
 </body>
 </html>
