rehacer botón de menu flotante

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </main>
   <button class="menufloat" id="menufloat" onclick="mostrarMenu()">+</button>
   <section class="subButton-container">
-    <button class="btn-admin" onclick="irAAdmin()" title="Panel de Administración">
+    <button class="btn-admin" onclick="irAABM()" title="Panel de Administración">
       ⚙️
     </button>
     <button class="btn-tts" onclick="irATTS()" title="Texto a Voz">
